src/snapshots/bem__parser__tests__parse_element_with_parentheses.snap
---
source: src/parser.rs
expression: e.to_string()
---
Pest parsing error:  --> 2:4
  |
2 | bar(baz,qux)
  |    ^---
  |
  = expected EOI, modifiers, or element
